@@ -18,9 +18,10 @@ interface
 uses
   SysUtils,
   Classes,
-  DOM,
-  XMLRead,
-  XMLWrite,
+  laz2_DOM,
+  laz2_XMLRead,
+  xmlreader,
+  laz2_XMLWrite,
   //Dialogs,
   StrUtils,
   //ExtCtrls,
@@ -433,11 +434,17 @@ begin
 end;
 
 
+
+
 //*************  XML Handling ***********************************
 function TuibXMLDocument.createXmlDocFromStringlist(docstrlist: TStringList): boolean;
 var
   mystream: TStringStream;
+  settings: TXMLReaderSettings;
 begin
+  settings:= TXMLReaderSettings.Create;
+  LogDatei.log('CanonicalForm: '+BoolToStr(settings.CanonicalForm,true),5);
+  settings.CanonicalForm:=true;
   createXmlDocFromStringlist := False;
   LogDatei.log('begin to create XMLDoc ', oslog.LLinfo);
   mystream := TStringStream.Create(docstrlist.Text);
@@ -446,6 +453,7 @@ begin
   try
     try
       ReadXMLFile(XML, mystream);
+      //ReadXMLFile(XML, mystream,'stream:',settings);
       LogDatei.log('XMLDoc created from Stringlist', LLinfo);
       createXmlDocFromStringlist := True;
     except
@@ -475,7 +483,9 @@ function TuibXMLDocument.isValidXML(xmlString: TStringList): boolean;
 var
   nodestream: TStringStream;
   Parser: TDOMParser;
-  Src: TXMLInputSource;
+  //Src: TXMLInputSource;
+  Src: LAZ2_XMLREAD.TXMLInputSource;
+  //osxmlsections.pas(498,23) Error: Incompatible type for arg no. 1: Got "XMLREADER.TXMLInputSource", expected "LAZ2_XMLREAD.TXMLInputSource"
   TheDoc: TXMLDocument;
 begin
   isValidXML := False;
@@ -484,9 +494,9 @@ begin
       Parser := TDOMParser.Create;
       nodestream := TStringStream.Create(stringlistWithoutBreaks(xmlString).Text);
       nodestream.Position := 0;
-      Src := TXMLInputSource.Create(nodestream);
+      Src := LAZ2_XMLREAD.TXMLInputSource.Create(nodestream);
       Parser.Options.Validate := True;
-      Parser.OnError := @ErrorHandler;
+      //Parser.OnError := @ErrorHandler;
       Parser.Parse(Src, TheDoc);
       isValidXML := True;
     except
