@@ -6,6 +6,12 @@ opsi-script (4.12.7.0) unreleased; urgency=medium
 
   * [fix] osparser: testsyntax, retrieveSection: use SearchForSectionLines
   * [fix] osparser: fix in OpsiServiceCall section (#4790, !91, a.schmitz)
+  * [fix] xml2 attribute sequence:
+          in (common) osxml, osxmlsections, osxmltdom
+          instead of (fcl) DOM, XMLRead, XMLWrite
+          now (LCL) az2_DOM, laz2_XMLRead, laz2_XMLWrite
+          additional changes to make to run the units with these libraries (references: #4791, , d.oertel)
+
 
 -- j.werner <j.werner@uib.de> 21 September 2022
 
